--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ resolver = "3"
 
 [workspace.dependencies]
 crabtime = { git = "https://github.com/Nekomaru-PKU/crabtime" }
+a = { path = "./a" }
+b = { path = "./b" }
