--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 members = ["a", "b"]
 resolver = "3"
 
+[workspace.package]
+edition = "2024"
+
+[workspace.lints]
+
 [workspace.dependencies]
-crabtime = { git = "https://github.com/Nekomaru-PKU/crabtime" }
+# doesn't work
+# crabtime = { git = "https://github.com/wdanilo/crabtime" }
+# work
+crabtime = { git = "https://github.com/mirsella/crabtime", branch = "local-dep" }
 a = { path = "./a" }
 b = { path = "./b" }
